# comparator

./: LICENSE  pyproject.toml  requirements-dev.txt  requirements.txt
comparator/: __init__.py
comparator/src/: core.py  data.py  exporters.py
docs/: api.md  usage.md
examples/: basic_comparison.py
src/connectors/: base.py  mysql.py  postgres.py  snowflake.py  sqlalchemy_connector.py
tests/: README.md  conftest.py  pytest.ini
tests/integration/: conftest.py  test_datasource_integration.py  test_workflow.py
tests/unit/: test_comparator.py  test_datasource.py  test_normalizer.py  test_reportexporter.py
tests/unit/connectors/: conftest.py  test_connector_interface.py  test_mysql_connector.py  test_postgres_connector.py
