[project]
name = "comparator"
version = "0.1.0"
description = "A tool for comparing data sources and generating comparison reports"
authors = [
    {name = "Wells"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "psycopg2-binary (>=2.9.7,<3.0.0)",
]

[dependency-groups]
dev = [
    "testcontainers (>=4.13.1,<5.0.0)",
    "pytest (>=7.4.0,<8.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "black (>=23.7.0,<24.0.0)",
    "isort (>=5.12.0,<6.0.0)",
    "mypy (>=1.5.1,<2.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=comparator --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
